# shred-guard

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  README_PYPI.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
src/shredguard/: __init__.py  __main__.py  _version.py  cli.py  config.py  fixer.py  git.py  gitignore.py  output.py  scanner.py
tests/: __init__.py  test_audit.py  test_cli.py  test_cli_e2e.py  test_config.py  test_fixer.py  test_git.py  test_gitignore.py  test_scanner.py
