[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "shred-guard"
dynamic = ["version"]
description = "A CLI tool to scan files for configurable regex patterns (PHI identifiers) and optionally replace matches with deterministic pseudonyms"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "@BeckettFrey" }
]
keywords = ["phi", "pii", "redaction", "pre-commit", "security"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pathspec>=0.11",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
shredguard = "shredguard.cli:main"

[project.urls]
Homepage = "https://github.com/shredguard/shredguard"
Documentation = "https://github.com/shredguard/shredguard#readme"
Repository = "https://github.com/shredguard/shredguard"
Issues = "https://github.com/shredguard/shredguard/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/shredguard/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/shredguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Example shredguard configuration
[tool.shredguard]
# Define patterns to scan for
[[tool.shredguard.patterns]]
regex = "SUB-\\d{4,6}"
description = "Subject ID"
# Optional: restrict to specific file patterns
# files = ["*.txt", "*.csv", "data/**"]
# exclude_files = ["*_anonymized.*"]

[[tool.shredguard.patterns]]
regex = "\\b\\d{3}-\\d{2}-\\d{4}\\b"
description = "SSN-like pattern"

[[tool.shredguard.patterns]]
regex = "MRN\\d{6,10}"
description = "Medical Record Number"
